--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,8 @@
 # скачайте дополнение для вашего редактора.
 
 
+; http://editorconfig.org
+
 root = true
 
 [*]
@@ -18,3 +20,9 @@ indent_size = 2
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.{go,py,rb,php}]
+indent_size = 4
+
+[*.md]
+trim_trailing_whitespace = false
